@@ -10,6 +10,7 @@ BUG: Ticket#302 - TDatePicker's bug with AutoPostBack set to "true" (Wei)
 BUG: Ticket#306 - Prado::localize function may fail when localized string passed as parameter (Wei)
 BUG: Ticket#311 - Several bugs in TDatePicker (Wei)
 BUG: Ticket#312 - TDatePicker's ReadOnly property bug (Wei)
+BUG: Default charset not sent (Wei)
 CHG: Ticket#206 - TBaseValidator.OnValidate is raised only when the validator is visible (Qiang)
 CHG: Raised PHP version requirement to 5.1 and above (Qiang)
 ENH: Ticket#178 - Added TRadioButton.UniqueGroupName property (Qiang)
